tests/should_fail/unsound_dyn.stderr
warning: support for trait objects (dyn) is limited and experimental
  --> unsound_dyn.rs:17:42
   |
17 |     proof_assert! { forall<x: dyn False> x.falso() == () }
   |                                          ^
   |
   = note: `#[warn(creusot::experimental)]` on by default

error: forbidden dyn type: dyn False (dyn support is currently minimal, please open an issue to improve this feature)

error: aborting due to 1 previous error; 1 warning emitted

